docs: update CLAUDE.md — LSB Jira refs, current epic status, known issues